S6/Type de Données/yacc/ReduceReduceConfl/parser.output
   0  $accept : %entry% $end

   1  start : expr EOL

   2  expr : arith_expr
   3       | list_expr

   4  arith_expr : INTCONST TIMES arith_expr
   5             | INTCONST

   6  list_expr : LSQBRACKET exprs_comma_sep RSQBRACKET
   7            | INTCONST TIMES list_expr

   8  exprs_comma_sep : expr
   9                  | expr COMMA exprs_comma_sep

  10  %entry% : '\001' start

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . start  (10)

	INTCONST  shift 3
	LSQBRACKET  shift 4
	.  error

	start  goto 5
	expr  goto 6
	arith_expr  goto 7
	list_expr  goto 8


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	arith_expr : INTCONST . TIMES arith_expr  (4)
	arith_expr : INTCONST .  (5)
	list_expr : INTCONST . TIMES list_expr  (7)

	TIMES  shift 9
	COMMA  reduce 5
	RSQBRACKET  reduce 5
	EOL  reduce 5


state 4
	list_expr : LSQBRACKET . exprs_comma_sep RSQBRACKET  (6)

	INTCONST  shift 3
	LSQBRACKET  shift 4
	.  error

	expr  goto 10
	arith_expr  goto 7
	list_expr  goto 8
	exprs_comma_sep  goto 11


state 5
	%entry% : '\001' start .  (10)

	.  reduce 10


state 6
	start : expr . EOL  (1)

	EOL  shift 12
	.  error


state 7
	expr : arith_expr .  (2)

	.  reduce 2


state 8
	expr : list_expr .  (3)

	.  reduce 3


state 9
	arith_expr : INTCONST TIMES . arith_expr  (4)
	list_expr : INTCONST TIMES . list_expr  (7)

	INTCONST  shift 3
	LSQBRACKET  shift 4
	.  error

	arith_expr  goto 13
	list_expr  goto 14


state 10
	exprs_comma_sep : expr .  (8)
	exprs_comma_sep : expr . COMMA exprs_comma_sep  (9)

	COMMA  shift 15
	RSQBRACKET  reduce 8


state 11
	list_expr : LSQBRACKET exprs_comma_sep . RSQBRACKET  (6)

	RSQBRACKET  shift 16
	.  error


state 12
	start : expr EOL .  (1)

	.  reduce 1


state 13
	arith_expr : INTCONST TIMES arith_expr .  (4)

	.  reduce 4


state 14
	list_expr : INTCONST TIMES list_expr .  (7)

	.  reduce 7


state 15
	exprs_comma_sep : expr COMMA . exprs_comma_sep  (9)

	INTCONST  shift 3
	LSQBRACKET  shift 4
	.  error

	expr  goto 10
	arith_expr  goto 7
	list_expr  goto 8
	exprs_comma_sep  goto 17


state 16
	list_expr : LSQBRACKET exprs_comma_sep RSQBRACKET .  (6)

	.  reduce 6


state 17
	exprs_comma_sep : expr COMMA exprs_comma_sep .  (9)

	.  reduce 9


14 terminals, 7 nonterminals
11 grammar rules, 18 states
